library-service/src/main/java/org/example/libraryservice/error/BookNotAvailableException.java
package org.example.libraryservice.error;

public class BookNotAvailableException extends RuntimeException {
    public BookNotAvailableException(String message) {
        super(message);
    }
}